@@ -1,4 +1,4 @@
-Copyright 2012-2025 David Robillard <d@drobilla.net>
+Copyright 2012-2026 David Robillard <d@drobilla.net>
 
 Permission to use, copy, modify, and/or distribute this software for any
 purpose with or without fee is hereby granted, provided that the above
