@@ -12,5 +12,5 @@ Checks: >
   -readability-identifier-length,
 CheckOptions:
   - key:   readability-function-cognitive-complexity.Threshold
-    value: '21'
+    value: '23'
 InheritParentConfig: true
