@@ -1,4 +1,4 @@
-// Copyright 2012-2024 David Robillard <d@drobilla.net>
+// Copyright 2012-2026 David Robillard <d@drobilla.net>
 // SPDX-License-Identifier: ISC
 
 #include <sratom/sratom.h>
@@ -957,16 +957,18 @@ read_object(Sratom*         sratom,
   } else if (type_urid == sratom->forge.Vector) {
     SordNode* child_type_node =
       sord_get(model, node, sratom->nodes.atom_childType, NULL, NULL);
-    uint32_t child_type =
-      map->map(map->handle, (const char*)sord_node_get_string(child_type_node));
-    uint32_t child_size = atom_size(sratom, child_type);
-    if (child_size > 0) {
-      LV2_Atom_Forge_Ref ref =
-        lv2_atom_forge_vector_head(forge, &frame, child_size, child_type);
-      read_list_value(sratom, forge, world, model, value, MODE_BODY);
-      lv2_atom_forge_pop(forge, &frame);
-      frame.ref = 0;
-      lv2_atom_forge_pad(forge, lv2_atom_forge_deref(forge, ref)->size);
+    if (child_type_node) {
+      uint32_t child_type = map->map(
+        map->handle, (const char*)sord_node_get_string(child_type_node));
+      uint32_t child_size = atom_size(sratom, child_type);
+      if (child_size > 0) {
+        LV2_Atom_Forge_Ref ref =
+          lv2_atom_forge_vector_head(forge, &frame, child_size, child_type);
+        read_list_value(sratom, forge, world, model, value, MODE_BODY);
+        lv2_atom_forge_pop(forge, &frame);
+        frame.ref = 0;
+        lv2_atom_forge_pad(forge, lv2_atom_forge_deref(forge, ref)->size);
+      }
     }
     sord_node_free(world, child_type_node);
   } else if (value && sord_node_equals(sord_node_get_datatype(value),
